# apache-websocket

./: .gitignore  CMakeLists.txt  CMakeUnix.cmake  CMakeWin32.cmake  CONTRIBUTING.md  Makefile.in  README.md  SConstruct  configure.ac  mod_websocket.c  runtests.sh  websocket.load.in
cmake/: CMakeUnix.cmake  CMakeWin32.cmake
cmake/modules/: FindAPACHE.cmake  FindAPR.cmake
test/: .gitignore  Makefile  README.md  aggregate.py  fuzzingclient.json  present.py  pytest.ini  requirements.txt  setup-win-test.ps1  test.conf  tests.yaml
test/httpd/: test.conf  test.conf.in
test/pytest/: test_allow_reserved_status_codes.py  test_configuration.py  test_cpu_load.py  test_message_size.py  test_opening_handshake.py  test_subprotocol_negotiation.py
test/pytest/testutil/: fixtures.py  websocket.py
